ExtendedFileManager bugfixes:  - editor does not display 'save' icon on systems that do not have Tahoma font installed    (see http://xinha.gogo.co.nz/punbb/viewtopic.php?id=672)  - small i18n fixes  - added 'alt; attribute for new img element inserted in changeset:579  - cleaned up polish l10n file  - ImageManager Files::formatSize returns MB/KB instead of Mb/Kb  - small whitespace fixes in ImageManager/Classes/ImageManager.php

--- a/plugins/ExtendedFileManager/assets/editor.css
+++ b/plugins/ExtendedFileManager/assets/editor.css
@@ -192,3 +192,5 @@
 	position: relative;
 	top: 490px;
 }
+
+#save_filename {width: 100px;}
